# sql_database

./: .gitignore  CMakeLists.txt  main.cpp
Database/cpp/: database.cpp
Database/header/: database.h
Debug/: Database
assets/files/: database2.db  database3.db
utility/: createfile.cpp  createfile.h
